Bug Fix:
Adding the Practice Status Endpoint + Materialized View
